# chip8_emu

./: CMakeLists.txt  Makefile  README.md  backend.c  backend.h  frontend.c
src/: backend.c  backend.cpp  backend.h  frontend.c  frontend.cpp
